fixed mobile game page overflow

--- a/frontend/src/components/CharacterSelect/CharacterSelect.css
+++ b/frontend/src/components/CharacterSelect/CharacterSelect.css
@@ -1,4 +1,6 @@
 .char-container {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
+    width: 100%;
 }
